# Rust workspace for SuperSonic's Rust-implemented subsystems.
#
# Currently hosts `supersonic-midi` — a midir-based MIDI subsystem that compiles
# both to a native staticlib (linked into the C++ engine) and to a wasm-bindgen
# module (loaded by the main-thread SuperSonic JS, where Web MIDI lives).
[workspace]
resolver = "2"
members = ["supersonic-midi"]

[profile.release]
opt-level = 3
lto = true
